// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyList component renders correctly when prop: listType=all 1`] = `
<div>
  <div
    className="sc-htoDjs fSfxfK"
  >
    Results
  </div>
  <div />
</div>
`;

exports[`PropertyList component renders correctly when prop: listType=saved 1`] = `
<div>
  <div
    className="sc-htoDjs fSfxfK"
  >
    Saved Properties
  </div>
  <div />
</div>
`;
